[package]
name = "fluffy-engine"
version = "0.1.0"
edition = "2021"
description = "An open source web site template"
readme = "README.md"
repository = "https://github.com/wbgoodwin/fluffy-engine"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
